syntax = "proto3";

package com.sushkevych.securitydevices.request.device.stream_by_id.proto;

option java_multiple_files = true;

import "com/sushkevych/securitydevices/commonmodels/device/device.proto";

message StreamByIdRequest {
  string device_id = 1;
}

message StreamByIdResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    commonmodels.device.Device device = 1;
  }

  message Failure {
    string message = 100;
  }
}
